--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         h1 {
             font-size: 24px;
             margin-bottom: 20px;
-            color: #1a73e8;
+            color: #1e57a1;
             font-weight: 600;
         }
 
@@ -61,7 +61,7 @@
             border: none;
             padding: 0.5rem 1rem;
             font-size: 1rem;
-            color: #1a73e8;
+            color: #144d97;
             cursor: pointer;
             transition: all 0.3s ease;
             position: relative;
@@ -76,7 +76,7 @@
             display: block;
             width: 100%;
             height: 2px;
-            background: #1a73e8;
+            background: #164e97;
             position: absolute;
             bottom: -5px;
             left: 0;
@@ -109,7 +109,7 @@
         .senha-gerada {
             font-size: 1.5rem;
             font-weight: bold;
-            color: #1a73e8;
+            color: #1a56a5;
             margin: 1.5rem 0;
             word-break: break-all;
             padding: 1rem;
@@ -126,7 +126,7 @@
         button#gerarSenha {
             width: 100%;
             padding: 12px;
-            background-color: #1a73e8;
+            background-color: #1e5399;
             color: white;
             font-size: 16px;
             border: none;
@@ -155,7 +155,7 @@
         }
 
         .senha-item strong {
-            color: #1a73e8;
+            color: #1d4e8f;
         }
 
         .senha-item small {
@@ -191,7 +191,7 @@
         button#apagarHistorico {
             width: 100%;
             padding: 12px;
-            background-color: #dc3545;
+            background-color: #741a23;
             color: white;
             font-size: 16px;
             border: none;
@@ -202,7 +202,7 @@
         }
 
         button#apagarHistorico:hover {
-            background-color: #c82333;
+            background-color: #a71c2a;
             transform: translateY(-2px);
         }
 
